--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,22 @@
 <html>
 <head>
-  <title>BatteryBot for Android</title>
+  <title>BatteryBot Battery Indicator for Android</title>
 </head>
 
 <body>
-<h1>BatteryBot for Android</h1>
+<h1>BatteryBot Battery Indicator for Android</h1>
 
-<p>Website coming soon...</p>
+<h3>Full website coming soon...</h3>
+
+<p><b>BatteryBot</b> (formerly <b>Battery Indicator</b>) is the
+original battery indicator app for Android, released in 2009.  Until
+this website is complete, more information is available in the Play
+Store or from the project website (see links below).
+</p>
+
+</p>BatteryBot is an open source project.  Source code is available from
+<a href="http://code.google.com/p/battery-indicator/">the project website</a>.
+</p>
 
 <p>Try the free version:</p>
 
