Design, description, favicon, robots.txt, etc. -- now a good enough basic site to start with.

--- a/static/index.html
+++ b/static/index.html
@@ -1,43 +1,80 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>BatteryBot Battery Indicator for Android</title>
-</head>
+  <head>
+    <title>BatteryBot Battery Indicator for Android</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link type="text/css" rel="stylesheet" href="/styles/default.css">
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+  </head>
 
-<body>
-<h1>BatteryBot Battery Indicator for Android</h1>
+  <body>
+    <header>
+      <h1>BatteryBot Battery Indicator</h1>
+      <img src="/images/header_icon_001.png" alt="" />
+    </header>
 
-<h3>Full website coming soon...</h3>
+    <div id="content">
 
-<p><b>BatteryBot</b> (formerly <b>Battery Indicator</b>) is the
-original battery indicator app for Android, released in 2009.  Until
-this website is complete, more information is available in the Play
-Store or from the project website (see links below).
-</p>
+      <h2>Android's Best Battery Indicator</h2>
 
-</p>BatteryBot is an open source project.  Source code is available from
-<a href="http://code.google.com/p/battery-indicator/">the project website</a>.
-</p>
+      <p>
+        <b>BatteryBot</b> (formerly <b>Battery Indicator</b>) is the
+        original battery indicator app for Android, released in 2009.
+        Both the free and the Pro versions have maintained a 4.5+ star
+        rating in Google Play from the beginning.
+      </p>
 
-<p>Try the free version:</p>
+      <p>
+        By default BatteryBot displays your exact battery percentage
+        in the status bar with detailed battery information in the
+        notification tray.  This can be disabled if you like.  There
+        are also desktop widgets included.
+      </p>
 
-<p>
-<a href="https://play.google.com/store/apps/details?id=com.darshancomputing.BatteryIndicator">
-  <img alt="Get it on Google Play"
-       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-</a>
-</p>
+      <p>
+        For a full list of features and many screenshots, please see
+        the listings in Google Play:
+      </p>
 
-<p>
-Go for Pro:
-</p>
+      <p>
+        <b>Try the free version:</b>
+      </p>
 
-<p>
-<a href="https://play.google.com/store/apps/details?id=com.darshancomputing.BatteryIndicatorPro">
-  <img alt="Get it on Google Play"
-       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-</a>
-</p>
+      <p style="text-align: center;">
+        <a href="https://play.google.com/store/apps/details?id=com.darshancomputing.BatteryIndicator">
+          <img alt="BatteryBot"
+               src="/images/Free-128.png"
+               style="height: 60px;"
+           /><img alt="Get it on Google Play"
+               src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+        </a>
+      </p>
 
-</body>
+      <p>
+        <b>Go for Pro:</b>
+      </p>
 
+      <p style="text-align: center;">
+        <a href="https://play.google.com/store/apps/details?id=com.darshancomputing.BatteryIndicatorPro">
+          <img alt="BatteryBot"
+               src="/images/Pro-128.png"
+               style="height: 60px;"
+           /><img alt="Get it on Google Play"
+               src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+        </a>
+      </p>
+
+      <p>BatteryBot is an open source project.  Source code is available from
+        <a href="http://code.google.com/p/battery-indicator/">the project website</a>.
+      </p>
+
+      <hr />
+
+      <footer>
+        Copyright &copy; 2009-2013 Darshan Computing, LLC &mdash; All Rights Reserved
+      </footer>
+
+    </div>
+  </body>
 </html>
