Compliance with Android brand guidelines.

--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,9 @@
 
       <p>
         <b>BatteryBot</b> (formerly <b>Battery Indicator</b>) is the
-        original battery indicator app for Android, released in 2009.
+        original battery indicator app for Android™, released in 2009.
         Both the free and the Pro versions have maintained a 4.5+ star
-        rating in Google Play from the beginning.
+        rating in Google Play™ from the beginning.
       </p>
 
       <p>
@@ -72,7 +72,12 @@
       <hr />
 
       <footer>
-        Copyright &copy; 2009-2013 Darshan Computing, LLC &mdash; All Rights Reserved
+        <p>
+          Copyright &copy; 2009-2013 Darshan Computing, LLC &mdash; All Rights Reserved
+        </p>
+        <p>
+          Android is a trademark of Google Inc.
+        </p>
       </footer>
 
     </div>
