Higher-resolution, non-official 'Get it on Google Play' badge.  From SVG presumably from Google originally; it looks identical to official version.

--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,8 @@
                src="/images/Free-128.png"
                style="height: 60px;"
            /><img alt="Get it on Google Play"
-               src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+               style="height: 60px;"
+               src="/images/get_it_on_google_play_400x139.png" />
         </a>
       </p>
 
@@ -61,7 +62,8 @@
                src="/images/Pro-128.png"
                style="height: 60px;"
            /><img alt="Get it on Google Play"
-               src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+               style="height: 60px;"
+               src="/images/get_it_on_google_play_400x139.png" />
         </a>
       </p>
 
