Transitioned to GitHub.

--- a/static/index.html
+++ b/static/index.html
@@ -67,15 +67,15 @@
         </a>
       </p>
 
-      <p>BatteryBot is an open source project.  Source code is available from
-        <a href="http://code.google.com/p/battery-indicator/">the project website</a>.
+      <p>BatteryBot is an open source project.  Source code is available on
+        <a href="https://github.com/darshan-/Battery-Indicator-Support/blob/master/SourceCode.md">GitHub</a>.
       </p>
 
       <hr />
 
       <footer>
         <p>
-          Copyright &copy; 2009-2013 Darshan Computing, LLC &mdash; All Rights Reserved
+          Copyright &copy; 2009-2015 Darshan Computing, LLC &mdash; All Rights Reserved
         </p>
         <p>
           Android is a trademark of Google Inc.
