Renamed main.go to batterybot.go so it is easy to tell processes apart.

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
       <h1>BatteryBot Battery Indicator</h1>
       <img src="/images/header_icon_001.png" alt="" />
     </header>
-
+<!-- test -->
     <div id="content">
 
       <h2>Android's Best Battery Indicator</h2>
