Update Google Play badge to Google's current version.  Be sure to say 'on' rather than 'in' Google Play, as per https://play.google.com/intl/en_us/badges/

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
         <b>BatteryBot</b> (formerly <b>Battery Indicator</b>) is the
         original battery indicator app for Android™, released in 2009.
         Both the free and the Pro versions have maintained a 4.5+ star
-        rating in Google Play™ from the beginning.
+        rating on Google Play™ from the beginning.
       </p>
 
       <p>
@@ -34,7 +34,7 @@
 
       <p>
         For a full list of features and many screenshots, please see
-        the listings in Google Play:
+        the listings on Google Play:
       </p>
 
       <p>
@@ -48,7 +48,7 @@
                style="height: 60px;"
            /><img alt="Get it on Google Play"
                style="height: 60px;"
-               src="/images/get_it_on_google_play_400x139.png" />
+               src="/images/get_it_on_google_play_564x168.png" />
         </a>
       </p>
 
@@ -63,7 +63,7 @@
                style="height: 60px;"
            /><img alt="Get it on Google Play"
                style="height: 60px;"
-               src="/images/get_it_on_google_play_400x139.png" />
+               src="/images/get_it_on_google_play_564x168.png" />
         </a>
       </p>
 
